@@ -27,11 +27,11 @@ CView::~CView()
         m_pD3D->Release();
 }
 
-HWND CView::Create(HWND hWndParent)
+HWND CView::Create(CWnd* pParent)
 {
 	// Called by CFrame::OnCreate. 
 	// The window is created when the thread resumes.
-	StartThread(hWndParent);
+	StartThread(pParent);
 	return 0;
 }
 
@@ -222,9 +222,9 @@ void CView::Render()
 	Sleep(1);
 }
 
-void CView::StartThread(HWND hwndParent)
+void CView::StartThread(CWnd* pParent)
 {
-	m_hwndParent = hwndParent;
+	m_pParent = pParent;
 	SetThreadPriority(THREAD_PRIORITY_BELOW_NORMAL);
 	ResumeThread();
 }
@@ -234,9 +234,9 @@ BOOL CView::InitInstance()
 	// This function runs when the thread starts
 
 	// Create the view window
-	CWnd::Create(m_hwndParent);
+	CWnd::Create(m_pParent);
 
-	PostMessage(m_hwndParent, UWM_VIEWCREATED, 0, 0);
+	m_pParent->PostMessage(UWM_VIEWCREATED, 0, 0);
 
 	return TRUE;	// return TRUE to run the message loop
 }
