@@ -1,9 +1,12 @@
 Version 7.1
 ===========
 - Added tStringStream typedef (a TCHAR stringstream)
+- Added CDialog::AttachItem
 - Added CDockContainer::SetActiveContainer
 - Added CDocker::Close
 - Added CDocker::SetCaptionHeight
+- Modified CResizer::AddChild	now takes a CWnd reference
+- Modified CWnd::Create 		now takes CWnd pointer instead of HWND
 - Renamed CDocker::GetDockWidth to CDocker::GetRedockSize
 - Renamed CDocker::SetDockWidth to CDocker::SetDockSize
 
